new Integer(int) -> Integer.valueOf(int).
This has been deprecated since Java 9.